# lacrei-saude

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerrun.aws.json  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: django-ci.yml  rollback.yml
.platform/hooks/postdeploy/: 10_migrate.sh
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
appointments/: models.py  serializers.py  tests.py  views.py
appointments/migrations/: 0001_initial.py
config/: settings.py  urls.py
logs/: .placeholder
professionals/: admin.py  models.py  serializers.py  tests.py  views.py
professionals/migrations/: 0001_initial.py  0002_alter_professional_email_alter_professional_phone.py
