[project]
name = "lacrei-saude"
version = "0.1.0"
description = "\"API em Django REST para gerenciamento de profissionais de saúde e agendamento de consultas\""
authors = [
    {name = "juliavillela",email = "julia.arruda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    \.venv
  | env
  | migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"